--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
             <li class="project">
               <div class="project__wrapper">
                 <img
-                  src="./assets/GO+ Mods Project 3.png"
+                  src="./assets/GO+ Mods Project.png"
                   class="project__img"
                   alt="GO+ Mods Project Image"
                 />
